--- a/emtech2_project/requirements.txt
+++ b/emtech2_project/requirements.txt
@@ -1,8 +1,9 @@
-tensorflow==2.12.0
-opencv-python-headless
-pillow
 numpy
-streamlit
-scikit-learn
+pandas
 matplotlib
-gdown
+seaborn
+opencv-python
+Pillow
+tensorflow==2.12.0
+streamlit==1.35.0
+scikit-learn
